err/pyfunge.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyFunge-0.5rc2.egg-info'...
Listing './lib/python3.5/site-packages/funge'...
Listing './lib/python3.5/site-packages/funge/fp'...
Compiling './lib/python3.5/site-packages/funge/fp/fp_3DSP.py'...
***   File "./lib/python3.5/site-packages/funge/fp/fp_3DSP.py", line 13
    def push_vector3(ip, (x, y, z)):
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/funge/languages'...
Compiling './lib/python3.5/site-packages/funge/main.py'...
***   File "./lib/python3.5/site-packages/funge/main.py", line 155
    except getopt.GetoptError, err:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/funge/program.py'...
***   File "./lib/python3.5/site-packages/funge/program.py", line 133
    except IPQuitted, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/funge/vector.py'...
***   File "./lib/python3.5/site-packages/funge/vector.py", line 77
    exec template in namespace
                ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
